--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/soubhikchatterjee/alfresco-uploader#readme",
   "dependencies": {
     "btoa": "^1.2.1",
+    "glob": "^7.1.2",
     "request": "^2.87.0",
     "request-promise-native": "^1.0.5"
   }
